[package]
name = "tisuos"
version = "0.1.0"
authors = ["1363558876@qq.com <1363558876@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
# tisu-sync = { path = "../../tisu-sync" }
# tisu-memory = { path = "../../tisu-memory" }
# tisu-driver = { path = "../../tisu-driver" }
# tisu-fs = { path = "../../tisu-fs" }
# virtio-input-decoder = { path = "../../virtio-input-decoder" }
# device-buffer = { path = "../../device-buffer" }
# tianmu-fs = { path = "../../tianmu-fs" }
# fs-format = { path = "../../fs-format" }
riscv64 = { git = "https://gitee.com/TisuOS/riscv64" }
tisu-sync = { git = "https://gitee.com/TisuOS/tisu-sync", tag = "v3.0" }
tisu-memory = { git = "https://gitee.com/TisuOS/tisu-memory", tag = "v3.1" }
tisu-driver = { git = "https://gitee.com/TisuOS/tisu-driver", tag = "v3.1" }
tisu-fs = { git = "https://gitee.com/TisuOS/tisu-fs", tag = "v4.1" }
device-buffer = { git = "https://gitee.com/TisuOS/device-buffer", tag = "v4.1" }
virtio-input-decoder = { git = "https://gitee.com/TisuOS/virtio-input-decoder" }
tianmu-fs = { git = "https://gitee.com/TisuOS/tianmu-fs", tag = "v1.0" }
fs-format = { git = "https://gitee.com/TisuOS/fs-format", tag = "v4.1" }