[package]
name = "user_lib"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# fs-format = { path = "../../fs-format" }
# tisu-sync = { path = "../../tisu-sync" }
# virtio-input-decoder = { path = "../../virtio-input-decoder" }
# tisu-driver = { path = "../../tisu-driver" }
# tisu-fs = { path = "../../tisu-fs" }
fs-format = { git = "https://github.com/TisuOS/fs-format", tag = "v4.0" }
tisu-sync = { git = "https://github.com/TisuOS/tisu-sync" }
virtio-input-decoder = "0.1.4"
tisu-driver = { git = "https://github.com/TisuOS/tisu-driver", tag = "v3.0" }
# tisu-fs = { git = "https://github.com/TisuOS/tisu-fs" }
